Fix height problem on mobile

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 #card {
   width: 60vw;
-  height: 60vh;
+  min-height: 60vh;
   margin-top: 15vh;
 }
 
@@ -13,6 +13,7 @@ body {
   padding-top: 10%;
   padding-left: 10%;
   padding-right: 10%;
+  padding-bottom: 10%;
   background-color: rgba(7, 102, 120, 0.75);
   border-radius: 5px;
   word-wrap: break-word;
@@ -22,6 +23,7 @@ body {
   padding-top: 10%;
   padding-left: 10%;
   padding-right: 10%;
+  padding-bottom: 10%;
   background-color: rgba(40, 40, 40, 0.75);
   border-radius: 5px;
   word-wrap: break-word;
